# twilight

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Readme.odt  Readme.rst  TODO  Todo  date.cc  date.hh  eclipses.csv  geometry.cc  geometry.hh  main.cc  main.cpp  make.sh  numerics.cc  numerics.hh  physics.cc  physics.hh  premake4.lua  show_sim  system.in  vector3d.cc  vector3d.hh
lib/: geometry.hh  physics.cc
misc/: comparison.ods  csv_merge.py  eclipses.csv  euler.out  gauss.out  geo1.ggb  heun.out  list_eclipses.py  load_eclipses.py  real.ggb  rk4.out  rk_comparison.ods  rkf.out  solar.csv  solar.txt  tangents.ggb  twocircles.ggb
src/: CMakeLists.txt  date.cc  geometry.cc  numerics.cc  numerics.hh  physics.hh
src/libtwilight/: CMakeLists.txt  date.cc  date.hh  geometry.cc  geometry.hh  libtwilight.hh  numerics.cc  physics.cc  physics.hh
src/twilightbin/: CMakeLists.txt  main.cc  utils.cc  utils.hh
test/: date_test.cc
